# desktop_pet

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt
desktop_pet/: __init__.py  config.py  main.py
desktop_pet/app/: __init__.py  pet_actor.py  window.py
desktop_pet/auth/: __init__.py  models.py  session.py  store.py
desktop_pet/camera/: __init__.py  detector.py
desktop_pet/health/: __init__.py  models.py  reminders.py
desktop_pet/jimeng/: __init__.py  client.py  i2v_client.py  i2v_worker.py  prompt.py  video_to_gif.py
desktop_pet/profile/: __init__.py  models.py  onboarding.py  permission.py  store.py
desktop_pet/ui/: __init__.py  avatar_gen_dialog.py  login.py  onboarding.py  plaza.py  register.py  speak_dialog.py  voice_record.py  welcome.py
desktop_pet/voice/: __init__.py  record.py  store.py  tts.py
tests/: __init__.py  test_auth.py  test_health.py  test_profile.py
