[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-pet"
version = "1.0.0"
description = "桌宠 - 健康管理与生命周期版：陪伴型桌面宠物，摄像头联动与健康提醒"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "PyQt6>=6.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
]

[project.scripts]
desktop-pet = "desktop_pet.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["desktop_pet*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
